--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -14,6 +14,7 @@ categories:
     labels:
       - 'code improvement'
       - 'continuous integration'
+      - 'documentarium'
 change-template: |
   ### $TITLE (#$NUMBER)
   
