--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -19,4 +19,9 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '3.1.x'
-      - run: dotnet run --project Zilon.Core/${{ matrix.bench_project }}/${{ matrix.bench_project }}.csproj --configuration Release --filter *${{ matrix.bench_filter }}*
+      - name: Runc Dotnetenchmark ${{ matrix.bench_project }}
+        env:
+          ZILON_LIV_SCHEME_CATALOG: /home/runner/work/Zilon_Roguelike/Zilon_Roguelike/Zilon.Client/Assets/Resources/Schemes
+          DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
+          DOTNET_CLI_TELEMETRY_OUTPUT: 1
+        run: dotnet run --project Zilon.Core/${{ matrix.bench_project }}/${{ matrix.bench_project }}.csproj --configuration Release --filter *${{ matrix.bench_filter }}*
