--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '3.1.x'
-      - name: Runc Dotnetenchmark ${{ matrix.bench_project }}
+      - name: Run DotNetBenchmark ${{ matrix.bench_project }}
         env:
           ZILON_LIV_SCHEME_CATALOG: /home/runner/work/Zilon_Roguelike/Zilon_Roguelike/Zilon.Client/Assets/Resources/Schemes
           DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
