--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -25,3 +25,7 @@ jobs:
           DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
           DOTNET_CLI_TELEMETRY_OUTPUT: 1
         run: dotnet run --project Zilon.Core/${{ matrix.bench_project }}/${{ matrix.bench_project }}.csproj --configuration Release --filter *${{ matrix.bench_filter }}*
+      - uses: actions/upload-artifact@v1
+        with:
+          name: benchs
+          path: Zilon.Core/BenchmarkDotNet.Artifacts/results
