Fix build after merge

--- a/Zilon.Core/Zilon.Core.Tests.Common/Zilon.Core.Tests.Common.csproj
+++ b/Zilon.Core/Zilon.Core.Tests.Common/Zilon.Core.Tests.Common.csproj
@@ -7,8 +7,7 @@
 		  <Version>2020.3.0</Version>
 		  <ExcludeAssets>runtime; build</ExcludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers">
-		  <Version>3.3.2</Version>
+		<PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="5.0.1">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
