--- a/Zilon.Core/Zilon.Core.Benchmarks.Gameplay/Zilon.Core.Benchmarks.Gameplay.csproj
+++ b/Zilon.Core/Zilon.Core.Benchmarks.Gameplay/Zilon.Core.Benchmarks.Gameplay.csproj
@@ -11,6 +11,10 @@
         <Version>2020.3.0</Version>
         <ExcludeAssets>runtime; build</ExcludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="5.0.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
