--- a/Zilon.Core/Zilon.Core.Benckmarks.Fow/Zilon.Core.Benchmarks.Fow.csproj
+++ b/Zilon.Core/Zilon.Core.Benckmarks.Fow/Zilon.Core.Benchmarks.Fow.csproj
@@ -7,6 +7,10 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="5.0.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
