--- a/.github/workflows/coverall.yml
+++ b/.github/workflows/coverall.yml
@@ -51,12 +51,12 @@ jobs:
         DOTNET_CLI_TELEMETRY_OUTPUT: 1
       run: |
         cd ./Zilon.Core
-        dotnet test ${{ matrix.test_csproj }}/${{ matrix.test_csproj }}.csproj --configuration Debug /p:CollectCoverage=true /p:CoverletOutput=${{env.TEST_RESULT_PATH}}/${{ matrix.test_csproj }} /p:CoverletOutputFormat=lcov /p:Exclude="[*Tests*]"
+        dotnet test ${{ matrix.test_csproj }}/${{ matrix.test_csproj }}.csproj --configuration Debug /p:CollectCoverage=true /p:CoverletOutput=${{env.TEST_RESULT_PATH}}/${{ matrix.test_csproj }}.info /p:CoverletOutputFormat=lcov /p:Exclude="[*Tests*]"
     - name: Publish coverage report to coveralls.io
       uses: coverallsapp/github-action@v1.1.2
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
-        path-to-lcov: ${{env.TEST_RESULT_PATH}}/${{ matrix.test_csproj }}coverage.info
+        path-to-lcov: ${{env.TEST_RESULT_PATH}}/${{ matrix.test_csproj }}.info
         parallel: true
         flag-name: ${{ matrix.test_category }}
 
