--- a/.github/workflows/coverall.yml
+++ b/.github/workflows/coverall.yml
@@ -51,7 +51,7 @@ jobs:
         DOTNET_CLI_TELEMETRY_OUTPUT: 1
       run: |
         cd ./Zilon.Core
-        dotnet test ${{ matrix.test_csproj }}/${{ matrix.test_csproj }}.csproj --configuration Debug /p:CollectCoverage=true /p:CoverletOutput=${{env.TEST_RESULT_PATH}}/${{ matrix.test_csproj }}.info /p:CoverletOutputFormat=lcov /p:ExcludeByAttribute="Obsolete,GeneratedCodeAttribute,CompilerGeneratedAttribute" /p:ExcludeByFile="**\Zilon.Core.Tests.Common\*.cs"
+        dotnet test ${{ matrix.test_csproj }}/${{ matrix.test_csproj }}.csproj --configuration Debug /p:CollectCoverage=true /p:CoverletOutput=${{env.TEST_RESULT_PATH}}/${{ matrix.test_csproj }}.info /p:CoverletOutputFormat=lcov /p:ExcludeByAttribute="Obsolete,GeneratedCode,CompilerGenerated" /p:ExcludeByFile="**\Zilon.Core.Tests.Common\*.cs"
     - name: Publish coverage report to coveralls.io
       uses: coverallsapp/github-action@v1.1.2
       with:
