--- a/.github/workflows/coverall.yml
+++ b/.github/workflows/coverall.yml
@@ -38,7 +38,7 @@ jobs:
         DOTNET_CLI_TELEMETRY_OUTPUT: 1
       run: |
         cd ./Zilon.Core
-        dotnet test ${{ matrix.test_suite }}.sln --configuration Release
+        dotnet test Zilon.Core/${{ matrix.test_suite }}.sln --configuration Release
     - name: Run ${{ matrix.test_suite }} in Debug and collect coverage
       env:
         ZILON_LIV_SCHEME_CATALOG: /home/runner/work/Zilon_Roguelike/Zilon_Roguelike/Zilon.Client/Assets/Resources/Schemes
@@ -46,7 +46,7 @@ jobs:
         DOTNET_CLI_TELEMETRY_OUTPUT: 1
       run: |
         cd ./Zilon.Core
-        dotnet test ${{ matrix.test_suite }}.sln --configuration Debug /p:CollectCoverage=true /p:CoverletOutput=${{env.TEST_RESULT_PATH}}/ /p:CoverletOutputFormat=lcov /p:ExcludeByAttribute="Obsolete" /p:ExcludeByFile="**\Zilon.Core.Tests.Common\*.cs"
+        dotnet test Zilon.Core/${{ matrix.test_suite }}.sln --configuration Debug /p:CollectCoverage=true /p:CoverletOutput=${{env.TEST_RESULT_PATH}}/ /p:CoverletOutputFormat=lcov /p:ExcludeByAttribute="Obsolete" /p:ExcludeByFile="**\Zilon.Core.Tests.Common\*.cs"
     - name: Publish coverage report to coveralls.io
       uses: coverallsapp/github-action@v1.1.2
       with:
