--- a/.github/workflows/coverall.yml
+++ b/.github/workflows/coverall.yml
@@ -20,6 +20,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         test_suite:
           - Zilon.Core.UnitTests
