--- a/.github/workflows/coverall.yml
+++ b/.github/workflows/coverall.yml
@@ -47,7 +47,7 @@ jobs:
         DOTNET_CLI_TELEMETRY_OUTPUT: 1
       run: |
         cd ./Zilon.Core
-        dotnet test ${{ matrix.test_suite }}.sln --configuration Debug /p:CollectCoverage=true /p:CoverletOutput=${{env.TEST_RESULT_PATH}}/ /p:CoverletOutputFormat=lcov /p:ExcludeByAttribute="Obsolete" /p:ExcludeByFile="**\Zilon.Core.Tests.Common\*.cs"
+        dotnet test ${{ matrix.test_suite }}.sln --configuration Debug /p:CollectCoverage=true /p:CoverletOutput=${{env.TEST_RESULT_PATH}} /p:CoverletOutputFormat=lcov /p:MergeWith="${{env.TEST_RESULT_PATH}}coverage.json" /p:ExcludeByAttribute="Obsolete" /p:ExcludeByFile="**\Zilon.Core.Tests.Common\*.cs" /maxcpucount:1
     - name: Publish coverage report to coveralls.io
       uses: coverallsapp/github-action@v1.1.2
       with:
