--- a/.github/workflows/coverall.yml
+++ b/.github/workflows/coverall.yml
@@ -47,12 +47,12 @@ jobs:
         DOTNET_CLI_TELEMETRY_OUTPUT: 1
       run: |
         cd ./Zilon.Core
-        dotnet test ${{ matrix.test_suite }}.sln --configuration Debug /p:CollectCoverage=true /p:CoverletOutput=${{env.TEST_RESULT_PATH}} /p:CoverletOutputFormat=lcov /p:MergeWith="${{env.TEST_RESULT_PATH}}coverage.json" /p:ExcludeByAttribute="Obsolete" /p:ExcludeByFile="**\Zilon.Core.Tests.Common\*.cs" /maxcpucount:1
+        dotnet test ${{ matrix.test_suite }}.sln --configuration Debug /p:CollectCoverage=true /p:CoverletOutput=${{env.TEST_RESULT_PATH}} /p:CoverletOutputFormat=\"lcov,json\" /p:MergeWith="${{env.TEST_RESULT_PATH}}coverage.json" /p:ExcludeByAttribute=\"Obsolete,GeneratedCode,CompilerGenerated\" /p:ExcludeByFile="**/Zilon.Core.Tests.Common/*.cs" /maxcpucount:1
     - name: Publish coverage report to coveralls.io
       uses: coverallsapp/github-action@v1.1.2
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
-        path-to-lcov: ${{env.TEST_RESULT_PATH}}/coverage.info
+        path-to-lcov: ${{env.TEST_RESULT_PATH}}coverage.info
         parallel: true
         flag-name: ${{ matrix.test_suite }}
 
