--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
           pull_request_base: master
       - run: dotnet build Zilon.Core/Zilon.Core.SonarScanner.sln -c Release
       - sonarcloud/end-scan
-  unit_test_debug:
+  test_45:
     working_directory: /test45
     docker:
       - image: mcr.microsoft.com/dotnet/core/sdk:3.1-alpine
@@ -45,20 +45,9 @@ jobs:
       ZILON_LIV_SCHEME_CATALOG: /test45/Zilon.Client/Assets/Resources/Schemes
     steps:
       - checkout
-      - run: dotnet test Zilon.Core/Zilon.Core.Tests/Zilon.Core.Tests.csproj -c Debug -r ./Results
+      - run: dotnet test Zilon.Core/Zilon.Core.Tests/Zilon.Core.Tests.csproj -c Release -r ./Results
       - store_test_results:
           path: ./Results/Zilon.Core.Tests.xml
-  unit_test_release:
-    working_directory: /test45
-    docker:
-      - image: mcr.microsoft.com/dotnet/core/sdk:3.1-alpine
-    environment:
-      DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
-      DOTNET_CLI_TELEMETRY_OUTPUT: 1
-      ZILON_LIV_SCHEME_CATALOG: /test45/Zilon.Client/Assets/Resources/Schemes
-    steps:
-      - checkout
-      - run: dotnet test Zilon.Core/Zilon.Core.Tests/Zilon.Core.Tests.csproj -c Release
   test_di:
     working_directory: /test_di
     docker:
@@ -107,7 +96,7 @@ jobs:
     steps:
       - checkout
       - run: dotnet test Zilon.Core/Zilon.Bot.Players.Tests/Zilon.Bot.Players.Tests.csproj -c Release -r ./Results
-  test_bots_release:
+  test_bots:
     working_directory: /test_bots
     docker:
       - image: mcr.microsoft.com/dotnet/core/sdk:3.1-alpine
@@ -117,18 +106,7 @@ jobs:
       ZILON_LIV_SCHEME_CATALOG: /test_bots/Zilon.Client/Assets/Resources/Schemes
     steps:
       - checkout
-      - run: dotnet test Zilon.Core/Zilon.Bot.Players.DevelopmentTests/Zilon.Bot.Players.DevelopmentTests.csproj -c Release
-  test_bots_debug:
-    working_directory: /test_bots
-    docker:
-      - image: mcr.microsoft.com/dotnet/core/sdk:3.1-alpine
-    environment:
-      DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
-      DOTNET_CLI_TELEMETRY_OUTPUT: 1
-      ZILON_LIV_SCHEME_CATALOG: /test_bots/Zilon.Client/Assets/Resources/Schemes
-    steps:
-      - checkout
-      - run: dotnet test Zilon.Core/Zilon.Bot.Players.DevelopmentTests/Zilon.Bot.Players.DevelopmentTests.csproj -c Debug
+      - run: dotnet test Zilon.Core/Zilon.Bot.Players.DevelopmentTests/Zilon.Bot.Players.DevelopmentTests.csproj -c Release -r ./Results
   test_specflow:
     working_directory: /test_specflow
     docker:
@@ -390,22 +368,15 @@ workflows:
       - build
       - sonar-scan:
           context: SonarCloud
-      - unit_test_debug:
-          requires:
-            - build
-      - unit_test_release:
+      - test_45:
           requires:
             - build
       - test_di:
           requires:
             - build
-            - unit_test_debug
-            - unit_test_release
       - test_players:
           requires:
             - build
-            - unit_test_debug
-            - unit_test_release
 # Спеки на неработают под netcore3.1
 # Разобраться и восстановить позже
 #      - test_specflow:
@@ -414,8 +385,7 @@ workflows:
       - test_bots:
           requires:
             - build
-            - unit_test_debug
-            - unit_test_release
+            - test_45
             - test_di
 # Спеки на неработают под netcore3.1
 # Разобраться и восстановить позже
@@ -423,8 +393,7 @@ workflows:
       - build_Win_x64:
           requires:
             - build
-            - unit_test_debug
-            - unit_test_release
+            - test_45
             - test_di
 # Спеки на неработают под netcore3.1
 # Разобраться и восстановить позже
@@ -436,13 +405,9 @@ workflows:
             branches:
               only:
                 - /release.*/
-      - unit_test_release:
-          requires:
-            - build
       - build_Win_x64:
           requires:
             - build
-            - unit_test_release
           filters:
             branches:
               only:
@@ -450,7 +415,6 @@ workflows:
       - build_Win_x32:
           requires:
             - build
-            - unit_test_release
           filters:
             branches:
               only:
@@ -458,7 +422,6 @@ workflows:
       - build_Linux_x64:
           requires:
             - build
-            - unit_test_release
           filters:
             branches:
               only:
@@ -466,7 +429,6 @@ workflows:
       - build_MacOS_Universal:
           requires:
             - build
-            - unit_test_release
           filters:
             branches:
               only:
@@ -474,7 +436,7 @@ workflows:
 #      - build_Linux_x32:
 #          requires:
 #            - build
-#            - unit_test_release
+#            - test_45
   nightly:
     triggers:
       - schedule:
@@ -486,10 +448,7 @@ workflows:
                 - beta
     jobs:
       - build
-      - unit_test_debug:
-          requires:
-            - build
-      - unit_test_release:
+      - test_45:
           requires:
             - build
       - test_di:
@@ -503,17 +462,10 @@ workflows:
 #      - test_specflow:
 #          requires:
 #            - build
-      - test_bots_debug:
+      - test_bots:
           requires:
             - build
-            - unit_test_debug
-            - unit_test_release
-            - test_di
-      - test_bots_release:
-          requires:
-            - build
-            - unit_test_debug
-            - unit_test_release
+            - test_45
             - test_di
 # Спеки на неработают под netcore3.1
 # Разобраться и восстановить позже
@@ -522,15 +474,13 @@ workflows:
 #      - test_mass_sector_generator:
 #           requires:
 #            - build
-#            - unit_test_debug
-#            - unit_test_release
+#            - test_45
 #            - test_di
 #            - test_specflow
       - build_Win_x64:
           requires:
             - build
-            - unit_test_debug
-            - unit_test_release
+            - test_45
             - test_di
 # Спеки на неработают под netcore3.1
 # Разобраться и восстановить позже
@@ -538,8 +488,7 @@ workflows:
       - build_Win_x32:
           requires:
             - build
-            - unit_test_debug
-            - unit_test_release
+            - test_45
             - test_di
 # Спеки на неработают под netcore3.1
 # Разобраться и восстановить позже
@@ -547,8 +496,7 @@ workflows:
       - build_Linux_x64:
           requires:
             - build
-            - unit_test_debug
-            - unit_test_release
+            - test_45
             - test_di
 # Спеки на неработают под netcore3.1
 # Разобраться и восстановить позже
@@ -556,16 +504,14 @@ workflows:
       - build_MacOS_Universal:
           requires:
             - build
-            - unit_test_debug
-            - unit_test_release
+            - test_45
 # Спеки на неработают под netcore3.1
 # Разобраться и восстановить позже
 #            - test_specflow
 #      - build_Linux_x32:
 #          requires:
 #            - build
-#            - unit_test_debug
-#            - unit_test_release
+#            - test_45
 # Не работает и не собирается, потому что бенчи написаны под net46,
 # а тестируемые библиотеки теперь netstandard20
 # Раскомментировать, когда будет восстановлена сборка.
