--- a/.github/workflows/linter-schemes.yml
+++ b/.github/workflows/linter-schemes.yml
@@ -1,7 +1,7 @@
-name: Fix Json Schemes
+name: Format Json Schemes
 
 # Run this workflow every time a new commit pushed to your repository
-on: push
+on: workflow_dispatch
 
 jobs:
   # Set the job key. The key is displayed as the job name
