--- a/.github/workflows/coverage-report-generator.yml
+++ b/.github/workflows/coverage-report-generator.yml
@@ -14,6 +14,7 @@ on:
 
 env:
   TEST_RESULT_PATH: /home/runner/work/Zilon_Roguelike/Zilon_Roguelike/TestResults/
+  REPORT_RESULT_PATH: /home/runner/work/ReportResult/
 
 jobs:
 
@@ -48,3 +49,11 @@ jobs:
       run: |
         cd ./Zilon.Core
         dotnet test ${{ matrix.test_suite }}.sln --configuration Release /p:CollectCoverage=true /p:CoverletOutput=${{env.TEST_RESULT_PATH}} /p:CoverletOutputFormat=\"cobertura,json\" /p:MergeWith="${{env.TEST_RESULT_PATH}}coverage.json" /p:SkipAutoProps=true /p:ExcludeByAttribute=\"Obsolete,GeneratedCode,CompilerGenerated\" /p:ExcludeByFile="**/Zilon.Core.Tests.Common/*.cs" /maxcpucount:1
+    - name: Generat report ${{ matrix.test_suite }} via ReportGenerator
+      run: |
+        dotnet tool install -g dotnet-reportgenerator-globaltool
+        reportgenerator "-reports:${{env.TEST_RESULT_PATH}}coverage.cobertura.xml" "-targetdir:${{ env.REPORT_RESULT_PATH }}" -reporttypes:Html
+    - uses: actions/upload-artifact@v2
+        with:
+          name: Report${{ matrix.test_suite }}
+          path: ${{ env.REPORT_RESULT_PATH }}
