--- a/.github/workflows/coverage-report-generator.yml
+++ b/.github/workflows/coverage-report-generator.yml
@@ -26,6 +26,8 @@ jobs:
         test_suite:
           - Zilon.Core.UnitTests
           - Zilon.Core.FunctionalTests
+        report_format:
+          - Html
 
     steps:
     - uses: actions/checkout@v2
@@ -49,10 +51,10 @@ jobs:
       run: |
         cd ./Zilon.Core
         dotnet test ${{ matrix.test_suite }}.sln --configuration Release /p:CollectCoverage=true /p:CoverletOutput=${{env.TEST_RESULT_PATH}} /p:CoverletOutputFormat=\"cobertura,json\" /p:MergeWith="${{env.TEST_RESULT_PATH}}coverage.json" /p:SkipAutoProps=true /p:ExcludeByAttribute=\"Obsolete,GeneratedCode,CompilerGenerated\" /p:ExcludeByFile="**/Zilon.Core.Tests.Common/*.cs" /maxcpucount:1
-    - name: Generat report ${{ matrix.test_suite }} via ReportGenerator
+    - name: Generat report ${{ matrix.test_suite }} via ReportGenerator in ${{ matrix.report_format }} format
       run: |
         dotnet tool install -g dotnet-reportgenerator-globaltool
-        reportgenerator "-reports:${{env.TEST_RESULT_PATH}}coverage.cobertura.xml" "-targetdir:${{ env.REPORT_RESULT_PATH }}" -reporttypes:Html
+        reportgenerator "-reports:${{env.TEST_RESULT_PATH}}coverage.cobertura.xml" "-targetdir:${{ env.REPORT_RESULT_PATH }}" -reporttypes:${{ matrix.report_format }}
     - uses: actions/upload-artifact@v2
         with:
           name: Report${{ matrix.test_suite }}
