--- a/.github/workflows/coverage-codecov.yml
+++ b/.github/workflows/coverage-codecov.yml
@@ -47,7 +47,7 @@ jobs:
         DOTNET_CLI_TELEMETRY_OUTPUT: 1
       run: |
         cd ./Zilon.Core
-        dotnet test ${{ matrix.test_suite }}.sln --configuration Release /p:CollectCoverage=true /p:CoverletOutput=${{env.TEST_RESULT_PATH}} /p:CoverletOutputFormat=\"coberture,json\" /p:MergeWith="${{env.TEST_RESULT_PATH}}coverage.json" /p:SkipAutoProps=true /p:ExcludeByAttribute=\"Obsolete,GeneratedCode,CompilerGenerated\" /p:ExcludeByFile="**/Zilon.Core.Tests.Common/*.cs" /maxcpucount:1
+        dotnet test ${{ matrix.test_suite }}.sln --configuration Release /p:CollectCoverage=true /p:CoverletOutput=${{env.TEST_RESULT_PATH}} /p:CoverletOutputFormat=\"cobertura,json\" /p:MergeWith="${{env.TEST_RESULT_PATH}}coverage.json" /p:SkipAutoProps=true /p:ExcludeByAttribute=\"Obsolete,GeneratedCode,CompilerGenerated\" /p:ExcludeByFile="**/Zilon.Core.Tests.Common/*.cs" /maxcpucount:1
     - name: Publish coverage report to codecove.io
       uses: codecov/codecov-action@v1
       with:
