--- a/.github/workflows/coverage-codecov.yml
+++ b/.github/workflows/coverage-codecov.yml
@@ -13,7 +13,7 @@ on:
       - 'v*.*.*'
 
 env:
-  TEST_RESULT_PATH: /home/runner/work/Zilon_Roguelike/Zilon_Roguelike/TestResults/
+  TEST_RESULT_PATH: ./TestResults/
 
 jobs:
 
