--- a/.github/workflows/coverage-codecov.yml
+++ b/.github/workflows/coverage-codecov.yml
@@ -13,7 +13,7 @@ on:
       - 'v*.*.*'
 
 env:
-  TEST_RESULT_PATH: ./TestResults/
+  TEST_RESULT_PATH: /home/runner/work/Zilon_Roguelike/Zilon_Roguelike/TestResults/
 
 jobs:
 
@@ -52,7 +52,8 @@ jobs:
       uses: codecov/codecov-action@v1
       with:
         flags: ${{ matrix.test_suite }}
-        files: ${{env.TEST_RESULT_PATH}}coverage.cobertura.xml"
+        directory: ${{env.TEST_RESULT_PATH}}
+        files: coverage.cobertura.xml"
         fail_ci_if_error: true
         verbose: true
 
