--- a/.github/workflows/coverage-codecov.yml
+++ b/.github/workflows/coverage-codecov.yml
@@ -53,7 +53,7 @@ jobs:
       with:
         flags: ${{ matrix.test_suite }}
         directory: ${{env.TEST_RESULT_PATH}}
-        files: coverage.cobertura.xml"
+        files: coverage.cobertura.xml
         fail_ci_if_error: true
         verbose: true
 
