--- a/.github/workflows/coverage-codecov.yml
+++ b/.github/workflows/coverage-codecov.yml
@@ -48,12 +48,13 @@ jobs:
       run: |
         cd ./Zilon.Core
         dotnet test ${{ matrix.test_suite }}.sln --configuration Release /p:CollectCoverage=true /p:CoverletOutput=${{env.TEST_RESULT_PATH}} /p:CoverletOutputFormat=\"cobertura,json\" /p:MergeWith="${{env.TEST_RESULT_PATH}}coverage.json" /p:SkipAutoProps=true /p:ExcludeByAttribute=\"Obsolete,GeneratedCode,CompilerGenerated\" /p:ExcludeByFile="**/Zilon.Core.Tests.Common/*.cs" /maxcpucount:1
-    - name: Publish coverage report to codecove.io
+    - name: Publish coverage report to codecov.io
       uses: codecov/codecov-action@v1
       with:
         flags: ${{ matrix.test_suite }}
         directory: ${{env.TEST_RESULT_PATH}}
-        files: coverage.cobertura.xml
+        working-directory: ${{env.TEST_RESULT_PATH}}
+        files: ./coverage.cobertura.xml
         fail_ci_if_error: true
         verbose: true
 
