Temp config to build unity client
To test localization config.

--- a/.github/workflows/build-unity-client.yml
+++ b/.github/workflows/build-unity-client.yml
@@ -1,16 +1,6 @@
 name: Build Unity Client
 
-on:
-  pull_request:
-    branches:
-      - master
-    tags:
-      - 'v*.*.*'
-  push:
-    branches:
-      - master
-    tags:
-      - 'v*.*.*'
+on: [push]
 
 jobs:
   buildCore:
