--- a/.github/workflows/build-unity-client.yml
+++ b/.github/workflows/build-unity-client.yml
@@ -3,27 +3,8 @@ name: Build Unity Client
 on: [push]
 
 jobs:
-  buildCore:
-    name: Build core libs
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        core_project:
-          - Zilon.Core
-          - Zilon.Bot.Players
-    steps:
-      - uses: actions/checkout@v2
-      - name: Setup .NET Core
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: '3.1.x'
-      - run: dotnet publish Zilon.Core/${{ matrix.core_project }}/${{ matrix.core_project }}.csproj -c Release -f netstandard2.0 -o bin
-      - uses: actions/upload-artifact@v1
-        with:
-          name: CoreLibs
-          path: bin
   buildForSomePlatforms:
-    name: Build for ${{ matrix.targetPlatform }} on version ${{ matrix.unityVersion }}
+    name: Build
     runs-on: ubuntu-latest
     needs: buildCore
     env:
@@ -32,7 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         projectPath:
-          - Zilon.Client
+          - LocalizationTestProject
         unityVersion:
           - 2020.1.16f1
         targetPlatform:
@@ -41,15 +22,6 @@ jobs:
       - uses: actions/checkout@v2
         with:
           lfs: true
-      - uses: actions/checkout@v2
-        with:
-          repository: kreghek/Zilon_Roguelike_Plugins
-          path: ${{ matrix.projectPath }}/Assets/Plugins/
-      - name: Download core libs from artifatcs
-        uses: actions/download-artifact@v2
-        with:
-          name: CoreLibs
-          path: ${{ matrix.projectPath }}/Assets/Plugins
       - uses: actions/cache@v1.1.0
         with:
           path: ${{ matrix.projectPath }}/Library
