--- a/LocalizationTestProject/Packages/manifest.json
+++ b/LocalizationTestProject/Packages/manifest.json
@@ -1,10 +1,11 @@
 {
   "dependencies": {
     "com.unity.collab-proxy": "1.3.9",
-    "com.unity.ide.rider": "1.2.1",
+    "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.5",
     "com.unity.ide.vscode": "1.2.3",
-    "com.unity.test-framework": "1.1.19",
+    "com.unity.localization": "0.10.0-preview",
+    "com.unity.test-framework": "1.1.22",
     "com.unity.textmeshpro": "3.0.1",
     "com.unity.timeline": "1.3.6",
     "com.unity.ugui": "1.0.0",
@@ -35,7 +36,6 @@
     "com.unity.modules.unitywebrequesttexture": "1.0.0",
     "com.unity.modules.unitywebrequestwww": "1.0.0",
     "com.unity.modules.video": "1.0.0",
-    "com.unity.modules.wind": "1.0.0",
-	"com.unity.localization": "0.10.0-preview"
+    "com.unity.modules.wind": "1.0.0"
   }
 }
