--- a/.github/workflows/mutation-test-stryker.yml
+++ b/.github/workflows/mutation-test-stryker.yml
@@ -23,7 +23,7 @@ jobs:
         dotnet-version: '3.1.x'
     - name: Setup Stryker
       run: |
-        dotnet tool install -g stryker
+        dotnet tool install -g dotnet-stryker
     - name: Run ${{ matrix.test_suite }}
       env:
         ZILON_LIV_SCHEME_CATALOG: /home/runner/work/Zilon_Roguelike/Zilon_Roguelike/Zilon.Client/Assets/Resources/Schemes
