--- a/.github/workflows/mutation-test-stryker.yml
+++ b/.github/workflows/mutation-test-stryker.yml
@@ -8,6 +8,7 @@ env:
 jobs:
 
   test:
+    name: Mutation Tests for ${{ matrix.test_suite }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
