--- a/.github/workflows/mutation-test-stryker.yml
+++ b/.github/workflows/mutation-test-stryker.yml
@@ -8,13 +8,10 @@ env:
 jobs:
 
   test:
-    name: Mutation Tests for ${{ matrix.test_suite }}
+    name: Mutation Tests
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
-      matrix:
-        test_suite:
-          - Zilon.Core.UnitTests
 
     steps:
     - uses: actions/checkout@v2
@@ -24,17 +21,17 @@ jobs:
         dotnet-version: '3.1.x'
     - name: Setup Stryker
       run: |
-        dotnet tool install -g dotnet-stryker
-    - name: Run ${{ matrix.test_suite }}
+        dotnet tool install -g dotnet-stryker --version 0.21.1
+    - name: Kill the mutants!
       env:
         ZILON_LIV_SCHEME_CATALOG: /home/runner/work/Zilon_Roguelike/Zilon_Roguelike/Zilon.Client/Assets/Resources/Schemes
         DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
         DOTNET_CLI_TELEMETRY_OUTPUT: 1
       run: |
-        cd ./Zilon.Core
-        dotnet stryker --solution-path "${{ matrix.test_suite }}.sln" --coverage-analysis all
-    - name: Publish mutation report of ${{ matrix.test_suite }}
+        cd ./Zilon.Core/Zilon.Core.Tests
+        dotnet stryker --project-file=/home/runner/work/Zilon_Roguelike/Zilon_Roguelike/Zilon.Core/Zilon.Core/Zilon.Core.csproj --ignore-methods "['ToString', 'ConfigureAwait', '*Exception.ctor']"
+    - name: Publish mutation report
       uses: actions/upload-artifact@v2
       with:
-        name: Report${{ matrix.test_suite }}
+        name: Report
         path: ${{ env.REPORT_RESULT_PATH }}
