--- a/.github/workflows/mutation-test-stryker.yml
+++ b/.github/workflows/mutation-test-stryker.yml
@@ -3,7 +3,7 @@ name: Mutation Tests using Stryker.NET
 on: [push]
 
 env:
-  REPORT_RESULT_PATH: /home/runner/work/Zilon_Roguelike/Zilon_Roguelike/StrykerOutput
+  REPORT_RESULT_PATH: /home/runner/work/Zilon_Roguelike/Zilon_Roguelike/Zilon.Core/Zilon.Core.Tests/StrykerOutput
 
 jobs:
 
