--- a/.github/workflows/mutation-test-stryker.yml
+++ b/.github/workflows/mutation-test-stryker.yml
@@ -1,6 +1,8 @@
 name: Mutation Tests using Stryker.NET
 
-on: [push]
+on:
+  schedule:
+    - cron: '0 0 * * *' # Nightly
 
 env:
   REPORT_RESULT_PATH: /home/runner/work/Zilon_Roguelike/Zilon_Roguelike/Zilon.Core/Zilon.Core.Tests/StrykerOutput
