Use game-ci activation image

--- a/.github/workflows/activation.yml
+++ b/.github/workflows/activation.yml
@@ -8,7 +8,7 @@ jobs:
     # Request manual activation file
     - name: Request manual activation file
       id: getManualLicenseFile
-      uses: webbertakken/unity-request-manual-activation-file@v1.1
+      uses: game-ci/unity-request-activation-file@v2.0-alpha-1
       with:
         unityVersion: 2020.2.5f1
     # Upload artifact (Unity_v20XX.X.XXXX.alf)
