--- a/Zilon.Client/Assets/Zilon/ZilonGameAssembly.asmdef
+++ b/Zilon.Client/Assets/Zilon/ZilonGameAssembly.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "ZilonGameAssembly",
     "references": [
-        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4"
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
+        "GUID:eec0964c48f6f4e40bc3ec2257ccf8c5",
+        "GUID:84651a3751eca9349aac36a66bba901b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
