--- a/.github/workflows/mutation-test-stryker.yml
+++ b/.github/workflows/mutation-test-stryker.yml
@@ -1,8 +1,6 @@
 name: Mutation Tests using Stryker.NET
 
-on:
-  schedule:
-    - cron: '0 0 * * *' # Nightly
+on: [push]
 
 env:
   REPORT_RESULT_PATH: /home/runner/work/Zilon_Roguelike/Zilon_Roguelike/Zilon.Core/Zilon.Core.Tests/StrykerOutput
@@ -31,7 +29,7 @@ jobs:
         DOTNET_CLI_TELEMETRY_OUTPUT: 1
       run: |
         cd ./Zilon.Core/Zilon.Core.Tests
-        dotnet stryker --project-file=/home/runner/work/Zilon_Roguelike/Zilon_Roguelike/Zilon.Core/Zilon.Core/Zilon.Core.csproj --ignore-methods "['ToString', 'ConfigureAwait', '*Exception.ctor', 'Equals', 'GetHashCode']" --excluded-mutations "['string']"
+        dotnet stryker --project-file=/home/runner/work/Zilon_Roguelike/Zilon_Roguelike/Zilon.Core/Zilon.Core/Zilon.Core.csproj --ignore-methods "['ToString', 'ConfigureAwait', '*Exception.ctor', 'Equals', 'GetHashCode']" --excluded-mutations "['string']" --log-file
     - name: Publish mutation report
       uses: actions/upload-artifact@v2
       with:
