Use latest unity-builder revision

--- a/.github/workflows/build-unity-client.yml
+++ b/.github/workflows/build-unity-client.yml
@@ -32,19 +32,18 @@ jobs:
         with:
           name: CoreLibs
           path: bin
+
   buildForSomePlatforms:
     name: Build for ${{ matrix.targetPlatform }} on version ${{ matrix.unityVersion }}
     runs-on: ubuntu-latest
     needs: buildCore
     env:
-      UNITY_LICENSE: ${{ secrets.UNITY_LICENSE_2020_1_16 }}
+      UNITY_LICENSE: ${{ secrets.UNITY_LICENSE_2020_3_0 }}
     strategy:
       fail-fast: false
       matrix:
         projectPath:
           - Zilon.Client
-        unityVersion:
-          - 2020.1.16f1
         targetPlatform:
           - StandaloneOSX # Build a macOS standalone (Intel 64-bit).
           - StandaloneWindows # Build a Windows standalone.
@@ -70,10 +69,10 @@ jobs:
           restore-keys: |
             Library-${{ matrix.projectPath }}-
             Library-
-      - uses: webbertakken/unity-builder@v2.0-aplha-5
+      - uses: game-ci/unity-builder@224f973562d7dc72505715af6c034f0eb5298069
         with:
           projectPath: ${{ matrix.projectPath }}
-          unityVersion: ${{ matrix.unityVersion }}
+          buildName: LAST
           targetPlatform: ${{ matrix.targetPlatform }}
       - uses: actions/upload-artifact@v1
         with:
