--- a/Zilon.Core/Zilon.Core/Zilon.Core.csproj
+++ b/Zilon.Core/Zilon.Core/Zilon.Core.csproj
@@ -34,4 +34,7 @@
             <Version>5.0.2</Version>
         </PackageReference>
     </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\Zilon.Core.Skills\Zilon.Core.Skills.csproj" />
+    </ItemGroup>
 </Project>
