--- a/CDT.LIV.Game/CDT.LIV.MonoGameClient/CDT.LIV.MonoGameClient.csproj
+++ b/CDT.LIV.Game/CDT.LIV.MonoGameClient/CDT.LIV.MonoGameClient.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -9,6 +9,14 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
+  <ItemGroup>
+    <Compile Remove="Content\bin\**" />
+    <Compile Remove="Content\obj\**" />
+    <EmbeddedResource Remove="Content\bin\**" />
+    <EmbeddedResource Remove="Content\obj\**" />
+    <None Remove="Content\bin\**" />
+    <None Remove="Content\obj\**" />
+  </ItemGroup>
   <ItemGroup>
     <None Remove="Icon.ico" />
     <None Remove="Icon.bmp" />
@@ -24,7 +32,37 @@
     <TrimmerRootAssembly Include="Microsoft.Xna.Framework.Content.ContentTypeReader" Visible="false" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1641" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="JsonSubTypes">
+      <HintPath>Libs\JsonSubTypes.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>Libs\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Drawing.Common">
+      <HintPath>Libs\System.Drawing.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Zilon.Bot.Players">
+      <HintPath>Libs\Zilon.Bot.Players.dll</HintPath>
+    </Reference>
+    <Reference Include="Zilon.Bot.Players.NetCore">
+      <HintPath>Libs\Zilon.Bot.Players.NetCore.dll</HintPath>
+    </Reference>
+    <Reference Include="Zilon.Bot.Sdk">
+      <HintPath>Libs\Zilon.Bot.Sdk.dll</HintPath>
+    </Reference>
+    <Reference Include="Zilon.Core">
+      <HintPath>Libs\Zilon.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Zilon.DependencyInjection">
+      <HintPath>Libs\Zilon.DependencyInjection.dll</HintPath>
+    </Reference>
+    <Reference Include="Zilon.Emulation.Common">
+      <HintPath>Libs\Zilon.Emulation.Common.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
