--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      
+      - name: Checkout submodules
+        uses: textbook/git-checkout-submodule-action@v2.1.1
+        with:
+          remote: true
 
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
