--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -34,7 +34,7 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: Checkout submodules
-        uses: textbook/git-checkout-submodule-action@v2.1.1
+        uses: textbook/git-checkout-submodule-action@master
         with:
           remote: true
       
@@ -73,7 +73,7 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: Checkout submodules
-        uses: textbook/git-checkout-submodule-action@v2.1.1
+        uses: textbook/git-checkout-submodule-action@master
         with:
           remote: true
       
