--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,11 +22,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      
-      - name: Checkout submodules
-        uses: textbook/git-checkout-submodule-action@master
         with:
-          remote: true
+          submodules: 'true'
 
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
