--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -32,11 +32,8 @@ jobs:
       fail-fast: false
     steps:
       - uses: actions/checkout@v2
-      
-      - name: Checkout submodules
-        uses: textbook/git-checkout-submodule-action@master
         with:
-          remote: true
+          submodules: 'true'
       
       - run: dotnet tool install --global dotnet-format --version 5.0.211103
       - name: Format codebase ${{ matrix.solution }}
@@ -71,11 +68,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      
-      - name: Checkout submodules
-        uses: textbook/git-checkout-submodule-action@master
         with:
-          remote: true
+          submodules: 'true'
       
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
