--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,10 +25,15 @@ jobs:
         with:
           submodules: 'true'
 
-      - name: Setup .NET Core
+      - name: Setup .NET5
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: [ '5.0.100', '3.1']
+          dotnet-version: '5.0.100'
+
+      - name: Setup .NET 3.1
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '3.1'
 
       - name: Install dependencies
         run: dotnet restore
