--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -37,7 +37,7 @@ jobs:
       
       - run: dotnet tool install --global dotnet-format --version 5.0.211103
       - name: Format codebase ${{ matrix.solution }}
-        run: dotnet format ${{ matrix.solution }}.sln --fix-whitespace --fix-style --verbosity detailed --exclude '*/Zilon.Core/*.cs'
+        run: dotnet format ${{ matrix.solution }}.sln --fix-whitespace --fix-style --verbosity quiet
       - name: Commit changes
         uses: EndBug/add-and-commit@v5
         with:
